--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "viniciussslima",
-  "version": "0.1.0",
-  "main": "./src/lib/index.tsx",
+  "version": "0.1.7",
+  "main": "dist/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,7 +19,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.svg src/**/*.css src/lib/**/*.css dist/",
+    "build": "yarn clean && tsc && yarn copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +42,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "files": [
+    "/dist",
+    "package.json"
+  ],
+  "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "rimraf": "^3.0.2"
   }
 }
