--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "dist",
   },
   "include": [
-    "src"
+    "src",
   ]
 }
