--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "viniciussslima",
   "version": "0.1.7",
   "main": "dist/index.js",
+  "repository": "https://github.com/viniciussslima/ReactLib",
+  "homepage": "https://github.com/viniciussslima/ReactLib",
+  "author": {
+    "name": "Vinicius Santos",
+    "email": "viniciussslima999@gmail.com",
+    "url": "https://portfolio-react-ruby.vercel.app/sobre"
+  },
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
