--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.svg src/**/*.css src/lib/**/*.css dist/",
     "build": "yarn clean && tsc && yarn copy-files",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "launch": "yarn build && yarn publish"
   },
   "eslintConfig": {
     "extends": [
