--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "viniciussslima",
   "version": "0.2.6",
   "main": "dist/index.js",
+  "types": "src/lib/types.d.ts",
   "repository": "https://github.com/viniciussslima/ReactLib",
   "homepage": "https://github.com/viniciussslima/ReactLib",
   "author": {
